--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -2,13 +2,12 @@
 FROM python:3.11-slim-bookworm AS builder
 WORKDIR /wheelhouse
 
-# --- DÜZELTME BURADA: pip wheel'den önce git'i kuruyoruz ---
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
     pip install --no-cache-dir wheel && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.gpu.txt .
-RUN pip wheel --no-cache-dir -r requirements.gpu.txt --index-url https://download.pytorch.org/whl/cu121
+RUN pip wheel --no-cache-dir -r requirements.gpu.txt --extra-index-url https://download.pytorch.org/whl/cu121
 
 # STAGE 2: Final - Çalışma zamanı imajı
 FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
