fix(ci): Optimize Dockerfile and add cleanup step to resolve disk space issue
PROJE-LLM-01:
- The GPU build was failing with a "no space left on device" error on the GitHub Actions runner. This is due to the large size of the CUDA base image and PyTorch dependencies consuming all available disk space during the build process.
- This commit resolves the issue by:
  1. Optimizing the `Dockerfile.gpu` to clean up apt caches and wheel files in the same layers they are created, reducing intermediate layer size.
  2. Adding a mandatory cleanup step to the `docker-gpu.yml` workflow that prunes the Docker build cache and unused images after the build attempt. This ensures sufficient disk space for the job to complete successfully.

--- a/.github/workflows/docker-gpu.yml
+++ b/.github/workflows/docker-gpu.yml
@@ -32,3 +32,15 @@ jobs:
           file: ./Dockerfile.gpu
           push: true
           tags: ghcr.io/${{ github.repository }}:gpu-latest
+          # no-cache: true parametresi disk sorunlarını artırabilir, şimdilik kaldırıyoruz.
+          # Docker'ın katman önbelleğini akıllıca kullanmasına izin verelim.
+
+      # --- YENİ TEMİZLİK ADIMI BURADA ---
+      - name: Clean up Docker resources
+        if: always() # Bu adım, önceki adım başarısız olsa bile çalışır
+        run: |
+          echo "==> Cleaning up Docker build cache and images to free up space..."
+          docker builder prune -af
+          docker image prune -af
+          echo "==> Displaying final disk space..."
+          df -h
