--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -4,7 +4,8 @@ WORKDIR /wheelhouse
 
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
     pip install --no-cache-dir wheel && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY requirements.gpu.txt .
 RUN pip wheel --no-cache-dir -r requirements.gpu.txt --extra-index-url https://download.pytorch.org/whl/cu121
@@ -19,13 +20,16 @@ ENV PYTHONUNBUFFERED=1 \
 
 WORKDIR /app
 
+# --- DÜZELTME BURADA: Tek RUN komutunda kurulum ve temizlik ---
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.11 python3.11-venv python3-pip curl \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN python3.11 -m venv /opt/venv
 
 COPY --from=builder /wheelhouse /wheelhouse
+# --- DÜZELTME BURADA: Kurulumdan sonra wheel dosyalarını temizle ---
 RUN pip install --no-cache-dir /wheelhouse/*.whl && rm -rf /wheelhouse /root/.cache/pip
 
 RUN addgroup --system --gid 1001 appgroup && \
