--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends git && \
     rm -rf /var/lib/apt/lists/*
 
 COPY requirements.gpu.txt .
-RUN pip wheel --no-cache-dir -r requirements.gpu.txt --extra-index-url https://download.pytorch.org/whl/cu121
+# --- DÜZELTME BURADA: --extra-index-url kaldırıldı ---
+RUN pip wheel --no-cache-dir -r requirements.gpu.txt
 
 # STAGE 2: Final - Çalışma zamanı imajı
 FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
@@ -20,7 +21,6 @@ ENV PYTHONUNBUFFERED=1 \
 
 WORKDIR /app
 
-# --- DÜZELTME BURADA: Tek RUN komutunda kurulum ve temizlik ---
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.11 python3.11-venv python3-pip curl \
     && apt-get clean && \
@@ -29,7 +29,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN python3.11 -m venv /opt/venv
 
 COPY --from=builder /wheelhouse /wheelhouse
-# --- DÜZELTME BURADA: Kurulumdan sonra wheel dosyalarını temizle ---
 RUN pip install --no-cache-dir /wheelhouse/*.whl && rm -rf /wheelhouse /root/.cache/pip
 
 RUN addgroup --system --gid 1001 appgroup && \
