feat(engine)!: Implement auto model conversion and local build setup
PROJE-LLM-01:
- Implements an automatic model download and conversion mechanism in `LLMEngine`. On first run, the service now downloads the specified model from Hugging Face, converts it to the CTranslate2 format, and saves it to a persistent volume. Subsequent runs will load the pre-converted model directly, significantly speeding up startup time. This removes the need for manual model preparation.
- Updates `docker-compose.cpu.yml` and `docker-compose.gpu.yml` to build the service from local source code (`build: .`) instead of pulling a pre-built image. This is crucial for local development and testing.
- Updates `requirements.txt` files to include `ctranslate2[transformers]` and `huggingface-hub` to support the new automated workflow.
- Refines the prompt formatting in `generate_stream` to match the official template for Phi-3, improving model response quality.

--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -1,6 +1,9 @@
 services:
   llm-local-service-cpu:
-    image: ghcr.io/sentiric/sentiric-llm-local-service:latest
+    # image: ghcr.io/sentiric/sentiric-llm-local-service:latest # <-- Bu satırı yorumla veya sil
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: llm-local-service-cpu
     environment:
       - ENV=development
