--- a/requirements.gpu.txt
+++ b/requirements.gpu.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-ctranslate2[cuda,transformers]==4.3.1
+ctranslate2[cuda]==4.3.1
+transformers==4.43.3
 huggingface-hub>=0.20.0
 pydantic-settings==2.4.0
 structlog==23.3.0
