fix(engine): Add torch dependency and enable verbose download logs
PROJE-LLM-01:
- The automatic model conversion process was failing silently because `ct2-transformers-converter` requires either PyTorch or TensorFlow to be installed. The `ModuleNotFoundError` was for `ct2_transformers_converter` itself, but the root cause was the missing framework. This commit adds the CPU-only version of `torch` to `requirements.txt` to satisfy this dependency while keeping the image size minimal.
- The long model download time was causing a poor user experience with no feedback. This is addressed by enabling INFO-level logging for the `huggingface_hub` library, which will now print download progress bars to the Docker logs.
- These changes ensure the model conversion process works reliably and provides better feedback during the initial setup.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 ctranslate2==4.3.1
 transformers==4.43.3
 huggingface-hub>=0.20.0
-# ct2-transformers-converter, transformers ile birlikte gelir.
+torch --extra-index-url https://download.pytorch.org/whl/cpu
 pydantic-settings==2.4.0
 structlog==23.3.0
 grpcio>=1.62.0
