--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -1,16 +1,19 @@
 services:
   llm-local-service-cpu:
-    # image: ghcr.io/sentiric/sentiric-llm-local-service:latest # <-- Bu satırı yorumla veya sil
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        # Bu argümanlar, Dockerfile'daki 'converter' aşamasına gönderilir
+        MODEL_NAME: ${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
+        COMPUTE_TYPE: ${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
     container_name: llm-local-service-cpu
     environment:
       - ENV=development
       - LOG_LEVEL=debug
       - LLM_LOCAL_SERVICE_DEVICE=cpu
       - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8
-      - LLM_LOCAL_SERVICE_MODEL_NAME=microsoft/Phi-3-mini-4k-instruct
+      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
     volumes: 
       - llm_model_cache:/app/model-cache
     ports: 
@@ -22,7 +25,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 15m
+      start_period: 60s # Artık indirme yapmadığı için başlangıç süresi çok daha kısa
 
 volumes:
   llm_model_cache:
