--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 ctranslate2==4.3.1
-transformers==4.43.3
+transformers==4.43.3  # Tokenizer için hala gerekli
 huggingface-hub>=0.20.0
-torch --extra-index-url https://download.pytorch.org/whl/cpu
 pydantic-settings==2.4.0
 structlog==23.3.0
 grpcio>=1.62.0
