refactor(build)!: Implement robust init-container pattern for model setup
PROJE-LLM-01:
- This commit completely overhauls the build and setup process to resolve persistent build failures and runtime complexity, adopting a best-practice "init container" pattern.
- The previous approaches of building a monolithic image or converting the model at runtime were flawed, leading to excessive image sizes, CI failures, and runtime dependency issues.

This definitive solution introduces:
1.  A dedicated `Dockerfile.converter` and `scripts/convert_model.py` to create a temporary "converter" container. This container's sole responsibility is to download and convert the model into a shared volume, keeping heavy dependencies like `torch` completely isolated from the runtime image.
2.  The main `Dockerfile` is now drastically simplified and optimized, creating an ultra-lightweight final image that contains NO model data and NO heavy libraries like `torch`.
3.  The `docker-compose.yml` files are updated to orchestrate this process, ensuring the main service only starts after the converter has successfully completed its one-time setup task.

This new architecture provides the best of all worlds: a fast, small, and reliable CI/CD process, and a fully automated, plug-and-play user experience.

--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -1,18 +1,24 @@
 services:
+  llm-model-converter:
+    build:
+      context: .
+      dockerfile: Dockerfile.converter
+    environment:
+      - MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
+      - COMPUTE_TYPE=${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
+    volumes:
+      - llm_model_cache:/models
+    # Bu servis işini yapıp çıkacak, port açmasına gerek yok.
+
   llm-local-service-cpu:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        # Bu argümanlar, Dockerfile'daki 'converter' aşamasına gönderilir
-        MODEL_NAME: ${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
-        COMPUTE_TYPE: ${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
     container_name: llm-local-service-cpu
     environment:
       - ENV=development
       - LOG_LEVEL=debug
       - LLM_LOCAL_SERVICE_DEVICE=cpu
-      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8
       - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
     volumes: 
       - llm_model_cache:/app/model-cache
@@ -20,12 +26,15 @@ services:
       - "16060:16060"
       - "16061:16061"
     restart: unless-stopped
+    depends_on:
+      llm-model-converter:
+        condition: service_completed_successfully
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:16060/health"]
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s # Artık indirme yapmadığı için başlangıç süresi çok daha kısa
+      start_period: 15s
 
 volumes:
   llm_model_cache:
