--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -10,7 +10,7 @@ services:
       - LOG_LEVEL=debug
       - LLM_LOCAL_SERVICE_DEVICE=cuda
       - LLM_LOCAL_SERVICE_COMPUTE_TYPE=float16
-      - LLM_LOCAL_SERVICE_MODEL_NAME=microsoft/Phi-3-mini-4k-instruct
+      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
     volumes: 
       - llm_model_cache:/app/model-cache
     ports: 
