--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -2,12 +2,13 @@ FROM python:3.11-slim-bookworm
 
 WORKDIR /app
 
-# Gerekli tüm ağır bağımlılıkları kur
+# --- DÜZELTME BURADA: Gerekli tüm bağımlılıkları kuruyoruz ---
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
     pip install --no-cache-dir \
         "torch" --extra-index-url https://download.pytorch.org/whl/cpu \
         "ctranslate2[transformers]>=4.0.0" \
-        "huggingface-hub>=0.20.0" && \
+        "huggingface-hub>=0.20.0" \
+        "structlog" && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY ./scripts/convert_model.py .
