--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -2,13 +2,12 @@ FROM python:3.11-slim-bookworm
 
 WORKDIR /app
 
-# --- DÜZELTME BURADA: Gerekli tüm bağımlılıkları kuruyoruz ---
+# Önce requirements dosyasını kopyala
+COPY ./requirements.converter.txt .
+
+# requirements dosyasından tüm bağımlılıkları kur
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
-    pip install --no-cache-dir \
-        "torch" --extra-index-url https://download.pytorch.org/whl/cpu \
-        "ctranslate2[transformers]>=4.0.0" \
-        "huggingface-hub>=0.20.0" \
-        "structlog" && \
+    pip install --no-cache-dir -r requirements.converter.txt && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY ./scripts/convert_model.py .
