--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -2,15 +2,32 @@ FROM python:3.11-slim-bookworm
 
 WORKDIR /app
 
-# Önce requirements dosyasını kopyala
-COPY ./requirements.converter.txt .
+ARG MODEL_NAME
+ARG COMPUTE_TYPE
 
-# requirements dosyasından tüm bağımlılıkları kur
+# --- DÜZELTME BURADA: Tüm işlemleri tek bir RUN komutunda birleştiriyoruz ---
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
-    pip install --no-cache-dir -r requirements.converter.txt && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    pip install --no-cache-dir \
+        "torch" --extra-index-url https://download.pytorch.org/whl/cpu \
+        "ctranslate2[transformers]>=4.0.0" \
+        "huggingface-hub>=0.20.0" && \
+    \
+    echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
+    HF_MODEL_PATH=$(python -c "from huggingface_hub import snapshot_download; path=snapshot_download(repo_id='${MODEL_NAME}', cache_dir='/models/hf_cache'); print(path)") && \
+    \
+    echo "==== Model dönüştürülüyor (${COMPUTE_TYPE}) ====" && \
+    ct2-transformers-converter \
+        --model ${HF_MODEL_PATH} \
+        --output_dir /models/converted_model \
+        --quantization ${COMPUTE_TYPE} \
+        --force && \
+    \
+    echo "✅ Dönüştürme tamamlandı." && \
+    # Temizlik
+    apt-get purge -y --auto-remove git && \
+    rm -rf /root/.cache/pip && \
+    rm -rf /var/lib/apt/lists/*
 
-COPY ./scripts/convert_model.py .
-
-# Bu konteyner çalıştığında, sadece convert_model.py script'ini çalıştıracak
-CMD ["python", "convert_model.py"]
+# Bu konteynerin tek görevi, build sırasında /models volume'ünü doldurmaktır.
+# Çalıştırılacak bir CMD komutuna ihtiyacı yok.
+CMD ["echo", "Model dönüştürme tamamlandı ve volume'e yazıldı."]
