fix(build): Add default values to build arguments in converter
PROJE-LLM-01:
- The build process was failing with an `HFValidationError` because the `MODEL_NAME` build argument was empty during the execution of the `converter` stage. This indicates an issue with how Docker Compose passes environment variables to build arguments.
- This commit resolves the issue by providing default values directly in the `Dockerfile.converter` using `ARG MODEL_NAME=...`.
- This defensive approach ensures that the build process will always have a valid model name to work with, even if the argument is not passed correctly from Docker Compose, making the build process more resilient and reliable.

--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -2,17 +2,21 @@ FROM python:3.11-slim-bookworm
 
 WORKDIR /app
 
-ARG MODEL_NAME
-ARG COMPUTE_TYPE
+# --- DÜZELTME 1: ARG'lara varsayılan değerler ekliyoruz ---
+ARG MODEL_NAME="microsoft/Phi-3-mini-4k-instruct"
+ARG COMPUTE_TYPE="int8"
 
-# --- DÜZELTME BURADA: Tüm işlemleri tek bir RUN komutunda birleştiriyoruz ---
+# --- DÜZELTME 2: Gerekli tüm bağımlılıkları açıkça kuruyoruz ---
 RUN apt-get update && apt-get install -y --no-install-recommends git && \
     pip install --no-cache-dir \
         "torch" --extra-index-url https://download.pytorch.org/whl/cpu \
         "ctranslate2[transformers]>=4.0.0" \
-        "huggingface-hub>=0.20.0" && \
-    \
-    echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
+        "huggingface-hub>=0.20.0" \
+        "structlog" && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# --- DÜZELTME 3: Script'i modül olarak değil, doğrudan çalıştırıyoruz ---
+RUN echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
     HF_MODEL_PATH=$(python -c "from huggingface_hub import snapshot_download; path=snapshot_download(repo_id='${MODEL_NAME}', cache_dir='/models/hf_cache'); print(path)") && \
     \
     echo "==== Model dönüştürülüyor (${COMPUTE_TYPE}) ====" && \
@@ -28,6 +32,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends git && \
     rm -rf /root/.cache/pip && \
     rm -rf /var/lib/apt/lists/*
 
-# Bu konteynerin tek görevi, build sırasında /models volume'ünü doldurmaktır.
-# Çalıştırılacak bir CMD komutuna ihtiyacı yok.
 CMD ["echo", "Model dönüştürme tamamlandı ve volume'e yazıldı."]
