--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -3,12 +3,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.converter
+      args:
+        MODEL_NAME: ${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
+        COMPUTE_TYPE: ${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
     environment:
       - MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
       - COMPUTE_TYPE=${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
     volumes:
       - llm_model_cache:/models
-    # Bu servis işini yapıp çıkacak, port açmasına gerek yok.
+    # Bu servis işini yapıp çıkacak, port açmasına gerek yok.        
 
   llm-local-service-cpu:
     build:
