--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -5,15 +5,17 @@ WORKDIR /app
 ARG MODEL_NAME="microsoft/Phi-3-mini-4k-instruct"
 ARG COMPUTE_TYPE="int8"
 
-RUN apt-get update && apt-get install -y --no-install-recommends git && \
+# --- DÜZELTME BURADA: Tüm işlemleri tek bir RUN komutunda birleştiriyoruz ---
+# Bu, tüm komutların aynı shell ve Python ortamında çalışmasını garanti eder.
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git && \
+    \
     pip install --no-cache-dir \
         "torch" --extra-index-url https://download.pytorch.org/whl/cpu \
         "ctranslate2[transformers]>=4.0.0" \
         "huggingface-hub>=0.20.0" && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# --- DÜZELTME BURADA: Gerekli import'ları manuel olarak zorluyoruz ---
-RUN echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
+    \
+    echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
     HF_MODEL_PATH=$(python -c "from huggingface_hub import snapshot_download; path=snapshot_download(repo_id='${MODEL_NAME}', cache_dir='/models/hf_cache'); print(path)") && \
     \
     echo "==== Model dönüştürülüyor (${COMPUTE_TYPE}) ====" && \
@@ -22,7 +24,9 @@ RUN echo "==== Model indiriliyor: ${MODEL_NAME} ====" && \
     echo "✅ Dönüştürme tamamlandı." && \
     # Temizlik
     apt-get purge -y --auto-remove git && \
+    apt-get clean && \
     rm -rf /root/.cache/pip && \
     rm -rf /var/lib/apt/lists/*
 
+# Bu konteynerin tek görevi, build sırasında /models volume'ünü doldurmaktır.
 CMD ["echo", "Model dönüştürme tamamlandı ve volume'e yazıldı."]
