--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
       - COMPUTE_TYPE=${LLM_LOCAL_SERVICE_COMPUTE_TYPE:-int8}
+      - DEVICE=cpu
     volumes:
       - llm_model_cache:/models
     # Bu servis işini yapıp çıkacak, port açmasına gerek yok.        
