feat(converter): Implement robust model conversion with Optimum-Intel
Refactors the entire model conversion process to be more robust, reliable,
and resilient to resource constraints. This commit resolves a series of
complex dependency, compatibility, and resource-related issues encountered
during the initial setup with CTranslate2.

Key Changes:
- Replaces `ctranslate2` with `optimum[intel]` (OpenVINO) for the model
  conversion process. `optimum` provides superior compatibility with modern
  Hugging Face models like Phi-3 and handles complex conversion logic internally.
- Updates `Dockerfile.converter` to install the correct and necessary
  dependencies, including `optimum[intel]` and `openvino`.
- Simplifies `scripts/convert_model.py` to leverage the high-level API
  of `OVModelForCausalLM`, which manages model downloading, conversion, and
  saving in a single, reliable step.

Learnings and Documentation:
- Adds a new `TESTING.md` document to standardize the verification
  process for the service.
- Updates `README.md` with a critical section on the resource-intensive
  nature of the initial model conversion. It now informs users about
  the potential for long wait times (15-30+ min) and the strong
  recommendation to use a swap file to prevent "Out of Memory" (exit 137)
  errors, even on systems with substantial RAM.

This commit marks the successful completion of the initial, challenging
setup phase, resulting in a stable and production-ready local LLM service.

--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -2,14 +2,18 @@ FROM python:3.11-slim-bookworm
 
 WORKDIR /app
 
-# Sadece script'i kopyala
+# MODERN VE UYUMLU KÜTÜPHANELERİ, TÜM ÇEKİRDEK BAĞIMLILIKLARIYLA BİRLİKTE KUR
+# 'openvino', 'optimum[intel]' kütüphanesinin çalışması için zorunludur.
+RUN pip install --no-cache-dir \
+    "optimum[intel]>=1.16.0" \
+    "openvino>=2023.3.0" \
+    "transformers>=4.40.0" \
+    "huggingface-hub>=0.20.0" \
+    "torch>=2.0.0" \
+    "accelerate>=0.25.0" --extra-index-url https://download.pytorch.org/whl/cpu
+
+# Kütüphaneler kurulduktan sonra betiği kopyala
 COPY ./scripts/convert_model.py .
 
-# Gerekli ortam değişkenlerini Dockerfile'ın kendisinden al
-ARG MODEL_NAME
-ARG COMPUTE_TYPE
-ENV MODEL_NAME=${MODEL_NAME}
-ENV COMPUTE_TYPE=${COMPUTE_TYPE}
-
-# Tek görev: script'i çalıştır. Tüm mantık artık script'in içinde.
+# Container çalıştığında doğrudan betiği çalıştır
 CMD ["python", "convert_model.py"]
