feat(converter): Implement robust model conversion with Optimum-Intel
Refactors the entire model conversion process to be more robust, reliable,
and resilient to resource constraints. This commit resolves a series of
complex dependency, compatibility, and resource-related issues encountered
during the initial setup with CTranslate2.

Key Changes:
- Replaces `ctranslate2` with `optimum[intel]` (OpenVINO) for the model
  conversion process. `optimum` provides superior compatibility with modern
  Hugging Face models like Phi-3 and handles complex conversion logic internally.
- Updates `Dockerfile.converter` to install the correct and necessary
  dependencies, including `optimum[intel]` and `openvino`.
- Simplifies `scripts/convert_model.py` to leverage the high-level API
  of `OVModelForCausalLM`, which manages model downloading, conversion, and
  saving in a single, reliable step.

Learnings and Documentation:
- Adds a new `TESTING.md` document to standardize the verification
  process for the service.
- Updates `README.md` with a critical section on the resource-intensive
  nature of the initial model conversion. It now informs users about
  the potential for long wait times (15-30+ min) and the strong
  recommendation to use a swap file to prevent "Out of Memory" (exit 137)
  errors, even on systems with substantial RAM.

This commit marks the successful completion of the initial, challenging
setup phase, resulting in a stable and production-ready local LLM service.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python
 __pycache__/
 *.py[codz]
 .env
@@ -6,6 +7,15 @@ venv/
 dist/
 build/
 *.egg-info/
+
+# Test & Tools
 .pytest_cache/
+.mypy_cache/
+
+# Cache & Logs
 /model-cache/
 *.log
+
+# IDE & Editor
+.vscode/
+.idea/
