feat(converter): Implement robust model conversion with Optimum-Intel
Refactors the entire model conversion process to be more robust, reliable,
and resilient to resource constraints. This commit resolves a series of
complex dependency, compatibility, and resource-related issues encountered
during the initial setup.

Key Changes:
- Replaces the `ctranslate2` converter with `optimum[intel]` (OpenVINO) for
  the model conversion process. `optimum` provides superior compatibility
  with modern Hugging Face models like Phi-3 and handles complex conversion
  logic internally.
- Updates `Dockerfile.converter` to install a stable and compatible set of
  dependencies, including `optimum[intel]`, `openvino`, and `accelerate`.
- Simplifies `scripts/convert_model.py` to leverage the high-level API
  of `OVModelForCausalLM`, making the process cleaner and more reliable.
- Standardizes environment variables across all `docker-compose` files
  (`cpu` and `gpu`). Both the converter and the main service now read from
  the same `LLM_LOCAL_SERVICE_*` prefixed variables, ensuring consistency.
- Prepares the `docker-compose.gpu.yml` file for future use by adding a
  fully configured `llm-model-converter-gpu` service.

Learnings and Documentation:
- Adds a new `TESTING.md` document to standardize the verification process
  for the service.
- Updates `README.md` with a critical section on the resource-intensive
  nature of the initial model conversion. It now informs users about
  the potential for long wait times (15-45+ min) and the strong
  recommendation to use a swap file to prevent "Out of Memory" (exit 137)
  errors.
- Adds a `.gitattributes` file to enforce consistent line endings across
  different operating systems.

This commit marks the successful completion of the

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -1,45 +1,59 @@
 services:
-  llm-model-converter:
+  llm-model-converter-gpu:
     build:
       context: .
       dockerfile: Dockerfile.converter
     environment:
       # Sadece standart ortam değişkenlerini kullanıyoruz
       - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
-      - LLM_LOCAL_SERVICE_DEVICE=cpu
+      - LLM_LOCAL_SERVICE_DEVICE=cuda
       # Diğer yardımcı değişkenler
       - HF_HUB_ENABLE_HF_TRANSFER=0
-      - TRANSFORMERS_VERBOSITY=info      
+      - TRANSFORMERS_VERBOSITY=info
     volumes:
       - llm_model_cache:/models
-    # Bu servis işini yapıp çıkacak, port açmasına gerek yok.        
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
-  llm-local-service-cpu:
+  llm-local-service-gpu:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: llm-local-service-cpu
+      dockerfile: Dockerfile.gpu
+    container_name: llm-local-service-gpu
     environment:
       - ENV=development
       - LOG_LEVEL=debug
-      - LLM_LOCAL_SERVICE_DEVICE=cpu
+      - LLM_LOCAL_SERVICE_DEVICE=cuda
+      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=float16 # Bu, ana uygulamanın beklentisi
       - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
     volumes: 
       - llm_model_cache:/app/model-cache
     ports: 
-      - "16060:16060" # HTTP Health
-      - "16061:16061" # gRPC
-      - "16062:16062" # Prometheus Metrics
+      - "16060:16060"
+      - "16061:16061"
+      - "16062:16062"
     restart: unless-stopped
     depends_on:
-      llm-model-converter:
+      llm-model-converter-gpu:
         condition: service_completed_successfully
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:16060/health"]
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 15s
+      start_period: 5m
 
 volumes:
   llm_model_cache:
